fix jumping from other welcome page

--- a/project/public/style/welcomeassociate_cs.css
+++ b/project/public/style/welcomeassociate_cs.css
@@ -4,7 +4,7 @@ body {
     background-color: #f7f9fc;
     margin: 0;
     padding: 0;
-    color: #ff0000;
+    color: #333;
 }
 
 header {
